text alignment bug fix

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ padding: 0 10rem;
 
 .text{
     font-size: 1.5rem;
-    text-align: left;
+    text-align: center;
     padding: 0 1rem;
     margin: 5rem 0;
 }
